apps/vaultwarden/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ${name}
  ingress:
  # Ingress controller
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": ingress-nginx
        app.kubernetes.io/instance: ingress-nginx
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  # DNS
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
  # SMTP
  - toPorts:
    - ports:
      - port: "25"
        protocol: TCP
      - port: "587"
        protocol: TCP
  # HTTP
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
